[gd_scene load_steps=15 format=2]

[ext_resource path="res://Resources/bg.png" type="Texture" id=1]
[ext_resource path="res://Resources/Dice/spritesheet.png" type="Texture" id=2]
[ext_resource path="res://Resources/Font/Grandstander-clean.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/Game.gd" type="Script" id=4]
[ext_resource path="res://Resources/Sounds/bg.mp3" type="AudioStream" id=5]
[ext_resource path="res://Resources/Sounds/reveal.wav" type="AudioStream" id=6]
[ext_resource path="res://Resources/Sounds/nreveal.wav" type="AudioStream" id=7]
[ext_resource path="res://Resources/Sounds/roll.wav" type="AudioStream" id=8]
[ext_resource path="res://Resources/Font/CHLORINR.TTF" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=5]
size = 50
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=1]
size = 70
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 70
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 100
outline_size = 10
outline_color = Color( 0.00392157, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 100
outline_size = 10
outline_color = Color( 0.0117647, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Game" type="Node"]
script = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 1, 0.588235, 0.258824, 1 )
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 203.0
margin_right = 853.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 5 )
text = "Pseudo Random"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dices" type="Node" parent="."]

[node name="Dice" type="Sprite" parent="Dices"]
position = Vector2( 300, 150 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
hframes = 6

[node name="Dice2" type="Sprite" parent="Dices"]
position = Vector2( 750, 150 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
hframes = 6
frame = 5

[node name="Buttons" type="Node" parent="."]

[node name="Roll" type="Button" parent="Buttons"]
margin_left = 161.0
margin_top = 463.0
margin_right = 391.0
margin_bottom = 540.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Roll!"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reveal" type="Button" parent="Buttons"]
margin_left = 634.0
margin_top = 460.0
margin_right = 909.0
margin_bottom = 537.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "Reveal!"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Output" type="Node" parent="."]

[node name="Overall" type="Label" parent="Output"]
margin_left = 454.0
margin_top = 111.0
margin_right = 604.0
margin_bottom = 314.0
custom_fonts/font = SubResource( 3 )
text = "?
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Odd" type="Label" parent="Output"]
margin_left = 37.0
margin_top = 274.0
margin_right = 1010.0
margin_bottom = 477.0
custom_fonts/font = SubResource( 4 )
text = "Press Roll to Start
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sounds" type="Node" parent="."]

[node name="Background" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 5 )
volume_db = -18.0

[node name="Roll" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 8 )

[node name="Reveal" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 6 )

[node name="NoPress" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 7 )

[connection signal="pressed" from="Buttons/Roll" to="." method="_on_Roll_pressed"]
[connection signal="pressed" from="Buttons/Reveal" to="." method="_on_Reveal_pressed"]
